Se modifican los test en el backend #21