@@ -4,10 +4,10 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,6 +18,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import com.nomorelaps.adapters.out.persistence.interfaces.ISanctionPersistenceAdapter;
 import com.nomorelaps.domain.models.Sanction;
 
+/**
+ * Unit tests for SanctionService.
+ * Verifies business logic for sanction management and payment processing.
+ */
 @ExtendWith(MockitoExtension.class)
 class SanctionServiceTest {
 
@@ -27,49 +31,68 @@ class SanctionServiceTest {
     @InjectMocks
     private SanctionService sanctionService;
 
+    private Sanction testSanction;
+    private Sanction testSanctionEmphy;
+
+    @BeforeEach
+    void setUp() {
+        testSanction = new Sanction();
+        testSanctionEmphy = new Sanction();
+        testSanction.setId(1L);
+        testSanction.setPaid(false);
+    }
+
     @Test
-    @DisplayName("create - Should delegate to persistence")
+    @DisplayName("create - Should delegate to persistence port")
     void shouldCreateSanction() {
-        Sanction s = new Sanction();
-        when(persistencePort.save(s)).thenReturn(s);
-        Sanction result = sanctionService.create(s);
-        assertEquals(s, result);
-        verify(persistencePort).save(s);
+        when(persistencePort.save(any(Sanction.class))).thenReturn(testSanction);
+        Sanction result = sanctionService.create(testSanction);
+        assertNotNull(result);
+        verify(persistencePort).save(testSanction);
     }
 
     @Test
-    @DisplayName("findById - Should return optional sanction")
-    void shouldFindById() {
-        Sanction s = new Sanction();
-        when(persistencePort.findById(1L)).thenReturn(Optional.of(s));
-        Optional<Sanction> result = sanctionService.findById(1L);
-        assertTrue(result.isPresent());
-        verify(persistencePort).findById(1L);
+    @DisplayName("paySanction - Should mark as paid and save")
+    void shouldPaySanction() {
+        when(persistencePort.findById(1L)).thenReturn(Optional.of(testSanction));
+        when(persistencePort.save(any(Sanction.class))).thenAnswer(i -> i.getArgument(0));
+
+        Sanction result = sanctionService.paySanction(1L);
+
+        assertTrue(result.isPaid());
+        verify(persistencePort).save(testSanction);
     }
 
     @Test
-    @DisplayName("findByUserId - Should return list")
-    void shouldFindByUserId() {
-        when(persistencePort.findByUserId(1L)).thenReturn(Arrays.asList(new Sanction()));
-        List<Sanction> result = sanctionService.findByUserId(1L);
-        assertEquals(1, result.size());
+    @DisplayName("paySanction - Should throw if not found")
+    void shouldThrowIfNotFoundForPayment() {
+        when(persistencePort.findById(99L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> sanctionService.paySanction(99L));
     }
 
     @Test
-    @DisplayName("findByReservationId - Should return list")
-    void shouldFindByReservationId() {
-        when(persistencePort.findByReservationId(1L)).thenReturn(Arrays.asList(new Sanction()));
-        List<Sanction> result = sanctionService.findByReservationId(1L);
-        assertEquals(1, result.size());
+    @DisplayName("Delegations - Should correctly call persistence ports for searches")
+    void shouldDelegateSearches() {
+        when(persistencePort.findByUserId(1L)).thenReturn(List.of());
+        sanctionService.findByUserId(1L);
+        verify(persistencePort).findByUserId(1L);
+
+        when(persistencePort.findByReservationId(1L)).thenReturn(List.of());
+        sanctionService.findByReservationId(1L);
+        verify(persistencePort).findByReservationId(1L);
+
+        when(persistencePort.findByCompanyId(1L)).thenReturn(List.of());
+        sanctionService.findByCompanyId(1L);
+        verify(persistencePort).findByCompanyId(1L);
     }
 
     @Test
     @DisplayName("update - Should delegate to persistence")
     void shouldUpdateSanction() {
-        Sanction s = new Sanction();
-        when(persistencePort.save(s)).thenReturn(s);
-        Sanction result = sanctionService.update(s);
-        assertEquals(s, result);
+
+        when(persistencePort.save(testSanctionEmphy)).thenReturn(testSanctionEmphy);
+        Sanction result = sanctionService.update(testSanctionEmphy);
+        assertEquals(testSanctionEmphy, result);
     }
 
     @Test
@@ -81,38 +104,17 @@ class SanctionServiceTest {
     }
 
     @Test
-    @DisplayName("findByCompanyId - Should return list of sanctions")
-    void shouldFindByCompanyId() {
-        Sanction s1 = new Sanction();
-        Sanction s2 = new Sanction();
-        when(persistencePort.findByCompanyId(1L)).thenReturn(Arrays.asList(s1, s2));
-
-        List<Sanction> result = sanctionService.findByCompanyId(1L);
-
-        assertEquals(2, result.size());
-        verify(persistencePort).findByCompanyId(1L);
-    }
-
-    @Test
-    @DisplayName("paySanction - Should set paid to true and save")
-    void shouldPaySanction() {
-        Sanction s = new Sanction();
-        s.setId(1L);
-        s.setPaid(false);
-
-        when(persistencePort.findById(1L)).thenReturn(Optional.of(s));
-        when(persistencePort.save(any(Sanction.class))).thenAnswer(i -> i.getArguments()[0]);
-
-        Sanction result = sanctionService.paySanction(1L);
-
-        assertTrue(result.isPaid());
-        verify(persistencePort).save(s);
-    }
-
-    @Test
     @DisplayName("paySanction - Should throw when not found")
     void shouldThrowWhenSanctionNotFound() {
         when(persistencePort.findById(99L)).thenReturn(Optional.empty());
         assertThrows(RuntimeException.class, () -> sanctionService.paySanction(99L));
+    }
+    @Test
+    @DisplayName("findById - Should return optional sanction")
+    void shouldFindById() {
+        when(persistencePort.findById(1L)).thenReturn(Optional.of(testSanctionEmphy));
+        Optional<Sanction> result = sanctionService.findById(1L);
+        assertTrue(result.isPresent());
+        verify(persistencePort).findById(1L);
     }
 }
